# koifish

./: .env.example  .gitignore  README.md  pyproject.toml
koifish/: default_settings.py
koifish/api/: __init__.py  routers.py
koifish/api/core/: app.py  config.py  deps.py  exceptions.py  logging.py  security.py
koifish/api/utils/: __init__.py  crypto.py  schema.py  video_utils.py
koifish/api/worker/: __init__.py  server.py
koifish/cmd/: web.py  worker.py
koifish/models/: __init__.py
koifish/modules/: __init__.py
koifish/modules/accounts/: forms.py  models.py  views.py
koifish/modules/accounts/templates/accounts/: change_password.html  create_or_edit.html  forgot_password.html  index.html  login.html
koifish/modules/dashboard/: forms.py  routers.py  schemas.py  views.py
koifish/modules/dashboard/templates/dashboard/: index.html  live.html
koifish/modules/site/: sites.py
koifish/schemas/: __init__.py  base.py
koifish/web/: __init__.py  acl.py
koifish/web/static/: package.json  tailwind.config.js
koifish/web/static/src/: main.css
koifish/web/templates/base/: base.html  default_page.html  footer.html  navbar.html  sidebar.html
scripts/: init-admin.py  run-dev  run-web  run-worker
