[tool.poetry]
name = "koifish"
version = "0.1.0"
description = ""
authors = ["Import Star"]

[tool.poetry.dependencies]
python = "^3.11"
flask-login = "^0.6.2"
gunicorn = "^20.1.0"
pypdf2 = "^3.0.1"
fpdf2 = "^2.7.4"
pandas = "^2.1.0"
openpyxl = "^3.1.2"
xlsxwriter = "^3.1.5"
python-dotenv = "^1.0.1"
xlrd = "^2.0.1"
pydantic = "^2.8.2"
fastapi = "^0.111.0"
loguru = "^0.7.2"
pydantic-settings = "^2.3.4"
fastapi-pagination = "^0.12.26"
bcrypt = "^4.1.3"
python-jose = "^3.3.0"
flask = "^3.0.3"
flask-me = "^1.0.2"
flask-wtf = "^1.2.1"
redis = "^5.0.8"
rq = "^1.16.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[tool.poetry.scripts]
koifish-web = "koifish.cmd.web:main"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
